<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/blue">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/auth_image"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="-100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textSize="12sp"
        android:layout_marginStart="-45dp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:backgroundTint="@color/light_gray"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textSize="12sp"
        android:layout_marginStart="-45dp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:backgroundTint="@color/light_gray"
        android:textColor="@android:color/black"/>

</LinearLayout>