<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/white">

    <!-- Toolbar sebagai Header -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Tombol Back -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="27dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/arrow_back_white"
            android:layout_marginTop="25dp"
            android:paddingStart="-10dp"/>

        <!-- Title di dalam Toolbar -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginTop="35dp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Foto Profil -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/person_white"
        android:background="@drawable/circle_background"
        android:contentDescription="Profile Picture"/>

    <!-- Tombol Ganti Foto -->
    <Button
        android:id="@+id/btn_change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ganti_foto"
        android:backgroundTint="@color/light_gray"
        android:textColor="@android:color/black"/>

    <!-- Form Profil -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Nama -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/name_text"
                android:textSize="16sp"
                android:focusable="false"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!-- Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/email_user"
                android:textSize="16sp"
                android:focusable="false"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!-- Resort -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resort"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_resort"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/contoh_resort"
                android:textSize="16sp"
                android:focusable="true"/>

            <ImageView
                android:id="@+id/edit_resort"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_edit"
                android:contentDescription="Edit Resort"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <!-- Tombol Simpan -->
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:backgroundTint="@color/light_gray"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"/>

</LinearLayout>
